--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env-cmd ./config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sayan-chatterjee",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
@@ -26,6 +29,8 @@
     "validator": "^13.1.1"
   },
   "devDependencies": {
-    "env-cmd": "^8.0.2"
+    "env-cmd": "^8.0.2",
+    "jest": "^26.4.0",
+    "supertest": "^4.0.2"
   }
 }
